incubation/k8s-training/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: training-deployment
    namespace: training
    labels:
        app: training-deployment
spec:
    #replicas: 3
    replicas: 2
    #replicas: 1
    selector:
        matchLabels:
            app: training-deployment
    template:
        metadata:
            labels:
                app: training-deployment
        spec:
            containers:
                -   name: training-deployment
                    image: labseeker/k8s-training:latest
                    # Minikube
                    #imagePullPolicy: Never
                    ports:
                        -   containerPort: 8111
                        #-   name: tr-port
                        #    containerPort: 8111
