incubation/k8s-training/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: training-service
    namespace: training
spec:
    selector:
        app: training-deployment
    ports:
        -   protocol: TCP
            port: 80
            targetPort: 8111
