incubation/k8s-training/k8s/all.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: training
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: training-deployment
    namespace: training
    labels:
        app: training-deployment
spec:
    #replicas: 3
    replicas: 2
    #replicas: 1
    selector:
        matchLabels:
            app: training-deployment
    template:
        metadata:
            labels:
                app: training-deployment
        spec:
            containers:
                -   name: training-deployment
                    image: labseeker/k8s-training:latest
                    # Minikube
                    #imagePullPolicy: Never
                    ports:
                        -   containerPort: 8111
                        #-   name: tr-port
                        #    containerPort: 8111
                    volumeMounts:
                        -   name: data-volume
                            mountPath: /mnt/data
            volumes:
                -   name: data-volume
                    persistentVolumeClaim:
                        claimName: training-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
    name: training-service
    namespace: training
spec:
    selector:
        app: training-deployment
    ports:
        -   protocol: TCP
            port: 80
            targetPort: 8111
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: training-ingress
    namespace: training
spec:
    rules:
        -   host: example.net
            http:
                paths:
                    -   path: /
                        #pathType: Exact
                        pathType: Prefix
                        backend:
                            service:
                                name: training-service
                                port:
                                    number: 80
