incubation/k8s-training/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: training-ingress
    namespace: training
spec:
    rules:
        -   host: example.net
            http:
                paths:
                    -   path: /
                        pathType: Exact
                        backend:
                            service:
                                name: training-service
                                port:
                                    number: 80
